--- a/public/stylesheets/site/login.styl
+++ b/public/stylesheets/site/login.styl
@@ -38,16 +38,13 @@ div.signup-msg
     color: black
     background-color: white
     padding: 5px 10px 5px 10px
-    position: relative
     border-radius(10px)
     transition all 1s ease-in-out
-    //overflow: visible
     width: 400px
     min-height: 45px
     margin-top: -40px
-    margin-bottom: 10px
     margin-left: 53%
-    //float: right
+    float: right
 
 .separator-login
     position: relative
@@ -244,9 +241,10 @@ div#error .dismiss
     color: black
     background-color: white
     padding: 22px 10px 5px 10px
-    position: absolute
-    top: -20px
-    right: 80px
+    position: relative
+    top: -85px
+    //right: 80px
+    left: 80%
     min-width: 40px
     max-height: 25px
     min-height: 25px
@@ -264,7 +262,7 @@ div#error .dismiss
     max-height: 1000px
 
 #logged-player.dismissed
-   top: -70px
+   top: -130px
 
 a.logout,a.settings
     font: 10px "Lucida Grande", Helvetica, Arial, sans-serif
