--- a/public/stylesheets/site/style.styl
+++ b/public/stylesheets/site/style.styl
@@ -67,6 +67,11 @@ a.link-grey:hover
     height: 100%
     background-color: #FFFFFF
 
+#main-container h1
+    position: relative
+    top: 20px
+    width: 500px
+
 #main-layout
     width: 960px
     background-color: #FFFFFF
